--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -57,6 +57,7 @@
     input {
       margin-top: 30px;
       padding: 10px;
+      padding-right: 50px;
       margin-bottom: 50px;
       font-size: 14px;
       border: 1px solid #ccc;
